ADIP/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adip
  labels:
    app.kubernetes.io/part-of: adip
